# DiscordGPT-rs

./: .gitignore  .shell.nix  Cargo.toml  README.md  devenv.yaml  flake.nix  log.txt  shell.nix
.cargo/: config.toml
.devenv/: profile
.direnv/: nix-profile-22.11-85nmy08mjhplkd3s  nix-profile-22.11-85nmy08mjhplkd3s.rc  nix-profile-22.11-dhdakb68bvihwrfv  nix-profile-22.11-dhdakb68bvihwrfv.rc
src/: event_handler.rs  handler.rs  main.rs  preset_selection.rs  sentiment_analysis.rs
