[package]
name = "bevyflake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.10", features = ["dynamic_linking"] } # Remove dynamic when shipping
#serde_json = "1.0"
